--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ html, body {
   border-radius: 50%;
   border: 3px solid black;
   box-sizing: border-box;
+  background-color: white;
 }
 
 .bracket-element, .plus-element, .space-element {
@@ -77,26 +78,34 @@ svg.path-container {
   box-sizing: border-box;
 }
 
-.hidden {
-  opacity: 0;
+.layer-background {
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+  border-bottom: 1px solid black;
+  box-sizing: border-box;
+}
+
+.layer-background:first-child {
+  border-top: 1px solid black;
 }
 
 .light-green {
   background-color: #8cff66;
 }
 
+.light-green2 {
+  background-color: #53ff1a;
+}
+
 .light-blue {
   background-color: #66b3ff;
 }
 
-.light-purple {
-  background-color: #d24dff;
-}
-
-.light-orange {
-  background-color: #ff9933;
-}
-
 .light-blue2 {
   background-color: #99ccff;
+}
+
+.light-blue3 {
+  background-color: #3399ff;
 }
