Update github and linkedin position/style

--- a/style.css
+++ b/style.css
@@ -14,14 +14,15 @@ footer {
   width: 100%;
   position: fixed;
   bottom: 0;
-  padding: 10px 0px;
+  padding-bottom: 5px;
   font-size: 20px;
 }
 
 .linkedin-github-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  width: 250px;
+  width: 150px;
   margin-right: 30px;
 }
 
@@ -30,6 +31,9 @@ footer {
   border: 3px solid black;
   border-radius: 5px;
   font: 18px sans-serif;
+  margin-bottom: 5px;
+  background-color: #4eaaff;
+  font-weight: bold;
 }
 
 #sidebar-container {
